feat: add testimonials and animals sliders, testimonials popup

--- a/online-zoo/assets/styles/global.css
+++ b/online-zoo/assets/styles/global.css
@@ -104,7 +104,6 @@ body {
 }
 .header__nav .nav__link:last-child {
   float: right;
-  
 }
 .nav__link:hover {
   color: #fe9013;
@@ -115,19 +114,7 @@ body {
 .nav__link-current {
   color: #f9804b;
 }
-.header__nav-active {
-  display: flex;
-  position: absolute;
-  top: 46px;
-  left: 0;
-  flex-direction: column;
-  background-color: rgba(72, 68, 68, 0.8);
-  ;
-  width: 100%;
-}
-.header__nav-active .nav__link {
-  margin: 10px 0 10px 40px;
-}
+
 .header__burger {
   display: none;
   height: 2px;
@@ -139,8 +126,8 @@ body {
   cursor: pointer;
 }
 .header__burger::before,
-.header__burger::after{
-  content: "";
+.header__burger::after {
+  content: '';
   position: absolute;
   background: #ffffff;
   width: 100%;
@@ -154,7 +141,7 @@ body {
 .header__burger::after {
   top: 300%;
 }
-.header__burger-active{
+.header__burger-active {
   background: rgba(223, 21, 21, 0);
 }
 .header__burger-active::before {
@@ -164,6 +151,22 @@ body {
 .header__burger-active::after {
   transform: rotate(-45deg);
   top: 0;
+}
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(34, 33, 33, 0.7);
+  z-index: 1000;
+  display: none;
+}
+body.has-overlay {
+  overflow: hidden;
+}
+body.has-overlay .overlay {
+  display: block;
 }
 
 /* ===== footer ===== */
@@ -331,7 +334,6 @@ body {
   color: #d31414;
 }
 
-
 /*----------- Adaptive Header ---------*/
 @media (max-width: 1000px) {
   .nav__link {
@@ -344,6 +346,27 @@ body {
   }
 }
 @media (max-width: 840px) {
+  .header__nav.active {
+    display: flex;
+    position: absolute;
+    top: 53px;
+    left: 0;
+    flex-direction: column;
+    background-color: #ffffff;
+    width: 100%;
+    height: 270px;
+    z-index: 2000;
+  }
+  .header__nav.active .nav__link {
+    margin: 10px 0 10px 10px;
+    color: #000000;
+  }
+  .header__nav.active .header {
+    background-color: #ffffff;
+  }
+  .header__nav.active .nav__link-current {
+    color: #f9804b;
+  }
   .header {
     position: fixed;
     width: 100%;
@@ -358,7 +381,7 @@ body {
     justify-content: space-between;
   }
   .header__nav {
-      display: none;
+    display: none;
   }
   .burger {
     display: block;
@@ -367,7 +390,7 @@ body {
     max-width: 46.86px;
     font-size: 12px;
     border: none;
-    margin: 0px;;
+    margin: 0px;
   }
   .header__logo::before {
     top: 0;
@@ -375,6 +398,34 @@ body {
   }
   .logo__text {
     font-size: 12px;
+  }
+  .burger-open .header {
+    background: #ffffff;
+    z-index: 2001;
+  }
+  .burger-open .header__logo {
+    border: 2px solid #fe9013;
+    max-width: 65.6px;
+    height: 41.6px;
+    margin-top: 10px;
+  }
+  .burger-open .header {
+    height: 54px;
+  }
+  .burger-open .header .container {
+    padding: 0 10px;
+  }
+  .burger-open .logo__link {
+    color: #fe9013;
+    z-index: 2001;
+  }
+  .burger-open .header__burger-active::before,
+  .burger-open .header__burger-active::after {
+    background: #000000;
+    z-index: 2001;
+  }
+  .burger-open .header__logo::before {
+    background-image: url('../images_adaptive/bamboo.svg');
   }
 }
 @media (max-width: 320px) {
@@ -388,9 +439,8 @@ body {
     top: 10px;
     left: 20px;
   }
-
 }
-  /* ------------Adaptive footer ---------- */
+/* ------------Adaptive footer ---------- */
 
 @media (max-width: 1200px) {
   .footer__nav {
@@ -412,17 +462,16 @@ body {
   }
   .footer__btn {
     margin-top: 36px;
-
   }
 }
 @media (max-width: 1000px) {
   .footer__nav {
     margin-left: 95px;
   }
-  .footer__nav .nav__link{
+  .footer__nav .nav__link {
     margin: 0 20px;
-  } 
-} 
+  }
+}
 @media (max-width: 840px) {
   .footer {
     padding: 15px 0px 12px;
@@ -435,45 +484,45 @@ body {
     max-width: 980px;
   }
   .footer__soc {
-      position: absolute;
-      top: -11px;
-      right: 0px;
+    position: absolute;
+    top: -11px;
+    right: 0px;
   }
   .footer__email {
-      display: none;
+    display: none;
   }
   .social__link {
-      font-size: 0px;
+    font-size: 0px;
   }
   .social__link::before {
-      left: 12px;
+    left: 12px;
   }
   .social__item {
-      margin-bottom: 30px;
+    margin-bottom: 30px;
   }
   .footer__nav {
-      justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__nav .nav__link:last-child {
     margin: 0;
     padding: 0;
   }
   .footer__nav .nav__link {
-      margin-left: 0px;
+    margin-left: 0px;
   }
   .footer__links {
-      margin-left: 73px;
+    margin-left: 73px;
   }
   .footer__btn {
-      margin-top: 32px;
-      margin-bottom: 67px;
+    margin-top: 32px;
+    margin-bottom: 67px;
   }
   .footer__logo {
-      margin: 0px;
+    margin: 0px;
   }
 }
 
-@media (max-width:720px) {
+@media (max-width: 720px) {
   .soc__link {
     font-size: 0;
     margin-bottom: 25px;
@@ -483,17 +532,16 @@ body {
   }
   .footer__nav .nav__link {
     padding: 0;
- }
+  }
   .soc__item {
     margin-right: -10px;
   }
 }
 
-
 @media (max-width: 570px) {
   .container {
     padding: 0 10px;
-    }
+  }
 }
 
 @media (max-width: 500px) {
@@ -513,9 +561,9 @@ body {
     margin-bottom: 85px;
   }
   .footer__logo::before {
-    content: "";
+    content: '';
     position: absolute;
-    background-image: url("../icons/bamboo.svg");
+    background-image: url('../icons/bamboo.svg');
     background-repeat: no-repeat;
     top: -3px;
     left: 75px;
@@ -574,5 +622,4 @@ body {
   .footer .container {
     padding: 0 10px;
   }
-
 }
