--- a/online-zoo/pages/main/petstory.css
+++ b/online-zoo/pages/main/petstory.css
@@ -409,6 +409,7 @@
   padding: 15px 15px 20px 15px;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 .testimonials__info {
   display: inline-block;
@@ -577,6 +578,7 @@
   font-size: 24px;
   right: 10px;
   width: 15px;
+  cursor: pointer;
 }
 
 /* Adaptive */
