--- a/gem-puzzle/styles.css
+++ b/gem-puzzle/styles.css
@@ -173,7 +173,7 @@ body.lock {
   align-items: center;
 }
 .size__current {
-  width: 400px;
+  max-width: 400px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
@@ -202,7 +202,7 @@ body.lock {
   margin-bottom: 10px;
 }
 .sizes__links {
-  width: 410px;
+  max-width: 400px;
   display: flex;
   justify-content: space-between;
 }
@@ -281,7 +281,15 @@ body.lock {
   .sizes__title,
   .size__current {
     margin-bottom: 3px;
-    font-size: 1.5rem;
+    font-size: 20px;
+  }
+  .sizes__link {
+    font-size: 16px;
+  }
+  .btn__audio {
+    height: 30px;
+    width: 45px;
+    font-size: 12px;
   }
 }
 
@@ -299,7 +307,7 @@ body.lock {
   }
   .area__field {
     width: 240px;
-    min-height: 120px;
+    min-height: 200px;
   }
   .cell-empty,
   .field__cell {
@@ -319,6 +327,11 @@ body.lock {
   .size__current {
     margin-bottom: 3px;
     font-size: 12px;
+  }
+  .btn__audio {
+    height: 20px;
+    font-size: 8px;
+    padding-top: 5px;
   }
 }
 @media (max-width: 430px) {
